--- a/src/scss/blocks/_similar.scss
+++ b/src/scss/blocks/_similar.scss
@@ -40,7 +40,7 @@
 
 @include tablet {
   .similar__list {
-    gap: 50px 26px;
+    gap: 26px 50px;
   }
 
   .similar__item {
